# chipshot

./: .chipshot.toml  .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yaml  CHANGELOG.rst  LICENSE.txt  README.rst  TODO.rst  pyproject.toml  tox.ini
.github/workflows/: prep-release.yaml  publish.yaml  test.yaml
assets/: update_readme_pre_commit_example.py
assets/headers/: global.txt
changelog.d/: 20231125_112723_kurtmckee_pre_commit_hook.rst  20231126_120704_kurtmckee_allow_template_in_config.rst  20231126_140652_kurtmckee_allow_template_in_config.rst  20231126_141734_kurtmckee_allow_template_in_config.rst  20231128_092055_kurtmckee_add_docs.rst  20231128_190201_kurtmckee_fix_header_finding_after_prolog.rst  20231128_192746_kurtmckee_add_ci.rst  20231128_230209_kurtmckee_standardize_config_getting.rst  20231129_070132_kurtmckee_eliminate_default_config_entirely.rst  20231129_191254_kurtmckee_check_emptiness_before_getting_encoding.rst  20231130_070157_kurtmckee_fix_writing_files.rst  20231130_090157_kurtmckee_add_how_to_doc.rst  20231130_222752_kurtmckee_docs.rst  20231130_225151_kurtmckee_support_paths.rst  20231203_092719_kurtmckee_support_paths.rst  20231206_222443_kurtmckee_identify_extensionless_files.rst  20231207_073026_kurtmckee_improve_exclusion_matching.rst  20231208_210840_kurtmckee_catch_exceptions.rst  20231208_220007_kurtmckee_detect_css_charsets.rst  20240206_081147_kurtmckee_python_3_13.rst  20240326_083603_kurtmckee_separate_dependencies.rst  20240501_090437_kurtmckee_gracefully_exit.rst  20250414_114529_kurtmckee_updates.rst  20250622_120348_kurtmckee_updates.rst  20250930_170125_kurtmckee_tex_comments.rst  20250930_172106_kurtmckee_updates.rst  20251126_140836_kurtmckee_fix_pyproject_urls.rst  20260108_082908_kurtmckee_updates.rst  20260108_091457_kurtmckee_more_updates.rst  20260115_074633_kurtmckee_enable_extensions.rst  20260115_093329_kurtmckee_compat.rst  20260115_223039_kurtmckee_support_haxe.rst  20260115_224601_kurtmckee_support_godot.rst  20260207_110022_kurtmckee_add_publish_workflow.rst  fragment-template.rst.txt
docs/: changelog.rst  colophon.rst  conf.py  index.rst  license.rst
docs/_static/: custom.css
docs/how-to/: custom-headers.rst  custom-style.rst  exclusions.rst
docs/reference/: boms.rst
docs/tutorial/: configuring.rst  installing.rst  overview.rst
requirements/: README.rst  docs.txt  mypy.txt  test.txt  testing.txt  type-linting.txt
requirements/docs/: pyproject.toml  requirements.txt
requirements/mypy/: pyproject.toml  requirements.txt
requirements/test/: pyproject.toml  requirements-coverage.txt  requirements.txt
src/chipshot/: __main__.py  cli.py  compare.py  config.py  exceptions.py  logger.py  render.py  shared.py  writer.py
src/chipshot/_compat/: py310.py
src/chipshot/reader/: __init__.py  encoding.py  header.py  identity.py  newlines.py  prolog.py  prologue.py
src/chipshot/resources/: default-config.toml
tests/: conftest.py  test_compare.py  test_config.py  test_reader.py  test_reader_encoding.py  test_reader_header.py  test_reader_identity.py  test_reader_newlines.py  test_reader_prolog.py  test_reader_prologue.py  test_render.py  test_writer.py
tests/files/templates/static/: defaults.ahk  defaults.bat  defaults.md  defaults.py  defaults.rst  defaults.sql  defaults.ttl  template.txt
