[project]
name = "chipshot"
version = "0.8.0"
description = "Set up game-winning headers!"
readme = "README.rst"
authors = [
    { name = "Kurt McKee", email = "contactme@kurtmckee.org" }
]
requires-python = ">=3.9"
license = "MIT"
repository = "https://github.com/kurtmckee/chipshot"
documentation = "https://chipshot.readthedocs.io"
dependencies = [
    "click >= 8.1.7",
    "jinja2 >= 3.1.3",
    "tomli >= 2.0.1; python_version < '3.11'",
]

[project.scripts]
chipshot = "chipshot.cli:run"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


# coverage
# --------

[tool.coverage.run]
relative_files = true
parallel = true
branch = true
source = [
    "chipshot",
    "tests",
]

[tool.coverage.paths]
source = [
    "src",
    "*/site-packages",
]

[tool.coverage.report]
skip_covered = true
fail_under = 85


# mypy
# ----

[tool.mypy]
packages = "chipshot"
strict = true
sqlite_cache = true


# scriv
# -----

[tool.scriv]
version = "literal: pyproject.toml: project.version"
categories = [
    "Python support",
    "Added",
    "Fixed",
    "Removed",
    "Changed",
    "Deprecated",
    "Security",
    "Documentation",
    "Development",
]
entry_title_template = "{{ version }} - {{ date.strftime('%Y-%m-%d') }}"
format = "rst"
fragment_directory = "changelog.d"
insert_marker = "scriv-insert-here"
main_branches = ["main", "releases"]
new_fragment_template = "file: fragment-template.rst.txt"


# pytest
# ------

[tool.pytest.ini_options]
addopts = "--color=yes"
filterwarnings = [
    "error",
]
