[project]
name = "chipshot"
version = "0.9.0"
description = "Set up game-winning headers!"
readme = "README.rst"
authors = [
    { name = "Kurt McKee", email = "contactme@kurtmckee.org" }
]
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "click >= 8.1.7",
    "jinja2 >= 3.1.3",
    "tomli >= 2.0.1; python_version < '3.11'",
]

[project.scripts]
chipshot = "chipshot.cli:run"

[project.urls]
Source = "https://github.com/kurtmckee/chipshot"
Documentation = "https://chipshot.readthedocs.io"
Changelog = "https://chipshot.readthedocs.io/en/latest/changelog/"
"Donate via GitHub" = "https://github.com/sponsors/kurtmckee"
"Donate via Ko-Fi" = "https://ko-fi.com/kurtmckee"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


# coverage
# --------

[tool.coverage.run]
relative_files = true
parallel = true
branch = true
source = [
    "chipshot",
    "tests",
]

[tool.coverage.paths]
source = [
    "src",
    "*/site-packages",
]

[tool.coverage.report]
skip_covered = true
fail_under = 85


# flake8
# ------

[tool.flake8]
max-line-length = 80
extend-select = ["B950"]
extend-ignore = ["E203", "E501", "E701"]


# mypy
# ----

[tool.mypy]
packages = "chipshot"
strict = true
sqlite_cache = true


# pytest
# ------

[tool.pytest]
addopts = [
    "--color=yes",
]
filterwarnings = [
    "error",
]
strict = true


# scriv
# -----

[tool.scriv]
version = "literal: pyproject.toml: project.version"
categories = [
    "Python support",
    "Default styles",
    "Added",
    "Fixed",
    "Removed",
    "Changed",
    "Deprecated",
    "Security",
    "Documentation",
    "Development",
]
entry_title_template = "{{ version }} - {{ date.strftime('%Y-%m-%d') }}"
format = "rst"
fragment_directory = "changelog.d"
insert_marker = "scriv-insert-here"
main_branches = ["main", "releases"]
new_fragment_template = "file: fragment-template.rst.txt"
